<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_action">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_sequence_inc">Retrofit - Type-safe Http client for Android and java by Sequence, Inc</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide - Image Loading Library by BumpTech</string>
    <string name="download">Download</string>
    <string name="please_select_the_file_to_downlaod">Please select the file to downlaod</string>
    <string name="channel_name">name_of_channel</string>
    <string name="channel_description">description_of_channel</string>
    <string name="loadapp">LoadApp</string>
    <string name="ok">Ok</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
</resources>
